1.0.42 Fix emoji visibility in notifications

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,12 @@
 }
 
 
+/* Fix for Emoji visibility in Nextcloud Notifications */
+#notification, .oc-notification, .notification {
+    font-family: var(--font-family-main, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif), 
+                 "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
+}
+
 :root {
     --cd-primary-color: var(--color-primary, #0082c9);
     --cd-primary-gradient: linear-gradient(135deg, var(--color-primary, #0082c9), var(--color-primary-element, #005691));
